--- a/index.html
+++ b/index.html
@@ -1,81 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Modern Trivia Game</title>
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            background: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        .container {
+            background: white;
+            padding: 2rem;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            width: 80%;
+            max-width: 600px;
+        }
+        h1 {
+            margin-bottom: 1rem;
+            font-size: 2rem;
+            color: #333;
+        }
+        .question {
+            font-size: 1.5rem;
+            margin-bottom: 1.5rem;
+            color: #555;
+        }
+        .answers {
+            list-style-type: none;
+            padding: 0;
+        }
+        .answers li {
+            margin: 0.5rem 0;
+        }
+        .answers button {
+            background: #007bff;
+            color: white;
+            border: none;
+            padding: 0.75rem 1.5rem;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: background 0.3s;
+        }
+        .answers button:hover {
+            background: #0056b3;
+        }
+        .result {
+            margin-top: 1.5rem;
+            font-size: 1.25rem;
+            color: #28a745;
+        }
+        .next-btn {
+            background: #28a745;
+            color: white;
+            border: none;
+            padding: 0.75rem 1.5rem;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: background 0.3s;
+            margin-top: 1.5rem;
+        }
+        .next-btn:hover {
+            background: #218838;
+        }
+    </style>
 </head>
-
 <body>
-    <div class="jumbotron">
-        <h1>Trivia!</h1>
-    </div>
-
     <div class="container">
-
-        <div class="section">
-            <h2>Part 1: Multiple Choice </h2>
-            <hr>
-
-            <!-- TODO: Add multiple choice question here -->
-            <h3>What is the approximate ratio of people to sheep in New zealand?</h3>
-            <button class="incorrect">6 people per 1 sheep</button>
-            <button class="incorrect">3 people per 1 sheep</button>
-            <button class="incorrect">1 person per 1 sheep</button>
-            <button class="incorrect">1 person per 3 sheep</button>
-            <button class="correct">1 person per 6 sheep</button>
-
-            <p id="feedback1"></p>
-        </div>
-
-        <div class="section">
-            <h2>Part 2: Free Response</h2>
-            <hr>
-
-            <!-- TODO: Add free response question here -->
-            <h3>In which country is it illegal to own one guinea pig, as a lone guinea pig might be lonely?</h3>
-            <input type="text"></input>
-            <button id="check">Check Answer</button>
-
-            <p id="feedback2"></p>
-
-        </div>
+        <h1>Trivia Game</h1>
+        <div class="question"></div>
+        <ul class="answers"></ul>
+        <button class="next-btn" onclick="nextQuestion()">Next Question</button>
+        <div class="result"></div>
     </div>
+
     <script>
-        // TODO: Add code to check answers to questions
-        //run the script once the DOM is loaded
-        window.addEventListener("load", function () {
-
-            //when correct answer is clicked change button colour to green
-            let correct = document.querySelector('.correct');
-            correct.addEventListener('click', function () {
-                correct.style.backgroundColor = 'green';
-                document.querySelector('#feedback1').innerHTML = 'Correct!';
-            });
-
-            //When any incorrect answer is clicked, change color to red.
-            let incorrects = document.querySelectorAll('.incorrect');
-            for (let i = 0; i < incorrects.length; i++) {
-                incorrects[i].addEventListener('click', function () {
-                    incorrects[i].style.backgroundColor = 'red';
-                    document.querySelector('#feedback1').innerHTML = 'Incorrect';
-                });
+        const questions = [
+            {
+                question: "What is the capital of France?",
+                answers: ["Berlin", "Madrid", "Paris", "Lisbon"],
+                correct: 2
+            },
+            {
+                question: "Which planet is known as the Red Planet?",
+                answers: ["Earth", "Mars", "Jupiter", "Venus"],
+                correct: 1
+            },
+            {
+                question: "Who wrote 'To Kill a Mockingbird'?",
+                answers: ["Harper Lee", "Mark Twain", "Ernest Hemingway", "F. Scott Fitzgerald"],
+                correct: 0
             }
+        ];
 
-            //check free response submission
-            document.querySelector('#check').addEventListener('click', function () {
-                let input = document.querySelector('input');
-                if (input.value === 'Switzerland') {
-                    input.style.backgroundColor = 'green';
-                    document.querySelector('#feedback2').innerHTML = 'Correct!';
-                } else {
-                    input.style.backgroundColor = 'red';
-                    document.querySelector('#feedback2').innerHTML = 'Incorrect';
-                }
+        let currentQuestion = 0;
+
+        function displayQuestion() {
+            const questionElement = document.querySelector('.question');
+            const answersElement = document.querySelector('.answers');
+            const resultElement = document.querySelector('.result');
+
+            questionElement.textContent = questions[currentQuestion].question;
+            answersElement.innerHTML = '';
+
+            questions[currentQuestion].answers.forEach((answer, index) => {
+                const li = document.createElement('li');
+                const button = document.createElement('button');
+                button.textContent = answer;
+                button.onclick = () => checkAnswer(index);
+                li.appendChild(button);
+                answersElement.appendChild(li);
             });
-        });
+
+            resultElement.textContent = '';
+        }
+
+        function checkAnswer(selected) {
+            const correct = questions[currentQuestion].correct;
+            const resultElement = document.querySelector('.result');
+
+            if (selected === correct) {
+                resultElement.textContent = 'Correct!';
+                resultElement.style.color = '#28a745';
+            } else {
+                resultElement.textContent = `Wrong! The correct answer is ${questions[currentQuestion].answers[correct]}.`;
+                resultElement.style.color = '#dc3545';
+            }
+        }
+
+        function nextQuestion() {
+            currentQuestion = (currentQuestion + 1) % questions.length;
+            displayQuestion();
+        }
+
+        displayQuestion();
     </script>
 </body>
 </html>
