--- a/index.html
+++ b/index.html
@@ -5,31 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modern Trivia Game</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
         body {
             font-family: 'Roboto', sans-serif;
-            background: #f0f0f0;
+            background: linear-gradient(45deg, #f3ec78, #af4261);
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
+            color: #333;
         }
         .container {
             background: white;
             padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
             text-align: center;
             width: 80%;
             max-width: 600px;
+            animation: fadeIn 1s ease-in-out;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
         h1 {
             margin-bottom: 1rem;
-            font-size: 2rem;
+            font-size: 2.5rem;
             color: #333;
         }
         .question {
-            font-size: 1.5rem;
+            font-size: 1.75rem;
             margin-bottom: 1.5rem;
             color: #555;
         }
@@ -45,32 +53,33 @@
             color: white;
             border: none;
             padding: 0.75rem 1.5rem;
-            border-radius: 4px;
+            border-radius: 8px;
             cursor: pointer;
             font-size: 1rem;
-            transition: background 0.3s;
+            transition: background 0.3s, transform 0.3s;
         }
         .answers button:hover {
             background: #0056b3;
+            transform: scale(1.05);
         }
         .result {
             margin-top: 1.5rem;
             font-size: 1.25rem;
-            color: #28a745;
         }
         .next-btn {
             background: #28a745;
             color: white;
             border: none;
             padding: 0.75rem 1.5rem;
-            border-radius: 4px;
+            border-radius: 8px;
             cursor: pointer;
             font-size: 1rem;
-            transition: background 0.3s;
+            transition: background 0.3s, transform 0.3s;
             margin-top: 1.5rem;
         }
         .next-btn:hover {
             background: #218838;
+            transform: scale(1.05);
         }
     </style>
 </head>
